<resources>
    <string name="app_name">HardwareInfo</string>
    <string name="string_logo_image">logo_image</string>
    <string name="string_hardwareinfo_tagline">Hardware Insights Made Easy.</string>
    <string name="string_desc_sign">signature_image</string>
    <string name="string_battery_level_label">Battery Level:\u0020</string>
    <string name="string_loading_placeholder">Loading...</string>
    <string name="string_battery_health_label">Battery Health:\u0020</string>
    <string name="string_n_a_placeholder">N/A</string>
    <string name="string_battery_status_label">Battery Status:\u0020</string>
    <string name="string_battery_technology_label">Battery Technology:\u0020</string>
    <string name="string_cpu_gpu_label"><![CDATA[CPU & GPU]]></string>
    <string name="string_processor_label">Processor:\u0020</string>
    <string name="string_cpu_cores_label">CPU Cores:\u0020</string>
    <string name="string_64_bit_support_label">64-bit Support:\u0020</string>
    <string name="string_gpu_renderer_label">GPU Renderer:\u0020</string>
    <string name="string_gpu_vendor_label">GPU Vendor:\u0020</string>
    <string name="string_camera_label">Camera</string>
    <string name="string_camera_megapixel_label">Camera Megapixel:\u0020</string>
    <string name="string_camera_aperture_label">Camera Aperture:\u0020</string>
    <string name="string_flash_available_label">Flash Available:\u0020</string>
    <string name="string_manufacturer_label">Manufacturer:\u0020</string>
    <string name="string_model_name_label">Model Name:\u0020</string>
    <string name="string_model_number_label">Model Number:\u0020</string>
    <string name="string_total_ram_label">Total RAM:\u0020</string>
    <string name="string_available_ram_label">Available RAM:\u0020</string>
    <string name="string_total_storage_label">Total Storage:\u0020</string>
    <string name="string_available_storage_label">Available Storage:\u0020</string>
    <string name="string_android_version_label">Android Version:\u0020</string>
    <string name="string_imei_device_id_label">IMEI/Device ID:\u0020</string>
    <string name="string_latitude_label">Latitude:\u0020</string>
    <string name="string_longitude_label">Longitude:\u0020</string>
    <string name="string_accuracy_label">Accuracy:\u0020</string>
    <string name="string_accelerometer_label">Accelerometer:\u0020</string>
    <string name="string_xyz_loading_placeholder">Loading..\nLoading..\nLoading..</string>
    <string name="string_gyroscope_label">Gyroscope:\u0020</string>
    <string name="string_barometer_label">Barometer:\u0020</string>
    <string name="string_rotation_vector_label">Rotation Vector:\u0020</string>
    <string name="string_proximity_label">Proximity:\u0020</string>
    <string name="string_light_sensor_label">Light Sensor:\u0020</string>
</resources>